<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Cnk_orderPad -->
    <string name="app_name">菜脑壳点菜系统</string>
    <string name="menu">菜 谱</string>
    <string name="ordered">查 单</string>
    <string name="services">服务</string>

    <!-- base -->
    <string name="back">返回</string>
    <string name="submit">提交菜单</string>
    <string name="loading">正在加载...</string>
    <string name="plusOne">+1</string>
    <string name="minusOne">-1</string>
    <string name="tableNum">桌号</string>
    <string name="dishCount">总共点了</string>
    <string name="totalPrice">总价</string>
    <string name="plusFive">+5</string>
    <string name="minusFive">-5</string>
    <string name="slash">/</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="error">错误</string>
    <string name="getStatus">正在获取状态...</string>
    <string name="networkErrorWarning">网络连接失败，请检查网络后重试</string>
    <string name="tryAgain">重试</string>
    <string name="pleaseWait">请稍等</string>
    <string name="persons">人数</string>
 	<string name="connectServer">正在连接服务器...</string>
 	<string name="pleaseNote">请注意</string>
 	
 	<!--  Mangement Activity -->
 	<string name="backupAndRestore">备份/恢复</string>
    <string name="updateMenu">更新菜谱</string>
    <string name="statistics">统计</string>
    <string name="mangement">管理</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="menuBackupTime">菜谱数据备份时间：</string>
    <string name="menuPicBackupTime">菜谱图片备份时间：</string>
    <string name="salesBackupTime">销售数据备份时间：</string>
    <string name="performance">绩效</string>
    <string name="menuMangement">后台管理</string>
 	
    <!-- StatisticsActivity -->
    <string name="setTime">设置时间</string>
    <string name="setDate">设置日期</string>
    <string name="startTime">开始:</string>
    <string name="endTime">结束:</string>
    <string name="queryByTime">按时间查询</string>
    <string name="queryToday">查询今天</string>
    <string name="print">打印</string>
    <string name="peroid">时间段:</string>
    <string name="dash">~</string>
    <string name="totalAmount">总营业额:</string>
    <string name="salesCount">销量</string>
    <string name="salesAmount">销售额</string>
    <string name="percentage">销售百分比</string>
    <string name="manageUri">http://www.cainaoke.com/manage/index.php</string>

    <!-- delActivity -->
    <string name="cleanAll">全退</string>
    <string name="clean">退菜</string>
    <string name="delWarning">亲：还没有点菜！请点菜嘛！</string>
    <string name="cleanAllWarning">亲：已经删除完了，不要再删了！</string>
	<string name="notClean">菜都上完，不能再退了</string>
	<string name="nothingToDel">没有可以退的菜</string>
	
    <!-- order -->
    <string name="continueOrder">继续点菜</string>
    <string name="phoneOrder">手机点的菜</string>
    <string name="queryOrder">已点的菜</string>
    <string name="refresh">刷新</string>
    <string name="delPhoneWarning">亲：你手机没有点菜哦</string>
    <string name="comment">备注</string>
    <string name="myOrder">我点的菜</string>
    <string name="phoneAdd">加菜</string>
    <string name="dishName">名称</string>
    
    <!-- table -->
    <string name="queryId">选择桌号</string>
    <string name="userWarning">用户名密码不正确</string>
    <string name="tableNotSet">还未设定桌号</string>
    <string name="tableWarning">请查看数据库桌号设定好没有</string>
    <string name="claenNotificaion">亲：还不快点，客人都着急啦！</string>
    <string name="logout">交班</string>
    <string name="checkout">结账</string>
    <string name="phoneWarning">网络连接不上</string>
    <string name="changeTIdWarning">转台不成功，请检查是否已经开台</string>
    <string name="changeSucc">转台成功</string>
    <string name="changeError">转台失败</string>
    <string name="copyTIdwarning">复制不成功，请检查是否已经点菜</string>
    <string name="copyTId">复制成功</string>
    <string name="tableUsage">服务桌数：</string>
    <string name="combineTable">并台</string>
    <string name="combineTIdWarning">合并不成功，请检查是否已经开台</string>
    <string name="combineSucc">合并成功</string>
    <string name="combineError">合并失败</string>
    <string name="dishNull">菜品为空，请点菜</string>
    <string name="tableId">桌号</string>
    <string name="idAndPersonsIsNull">请输入桌号或者人数!</string>
    <string name="settings">设置</string>
    <string name="flavor">口味</string>
    <string name="checkOutWarning">收银不成功，请检查是否开台</string>
    <string name="checkOutSucc">收银成功</string>
    <string name="servedPersons">服务人数：</string>
    <string name="chooseFunction">选择功能</string>
    <string name="isCleanTable">请确认是否清台</string>
    <string name="cleanTable">清台</string>
    <string name="cleanTableNow">正在清台...</string>
    <string name="isCleanOrder">是否清除顾客点的菜</string>
    <string name="cleanPhoneOrderNow">正在删除手机点的菜...</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="pleaseInput">请输入</string>
    <string name="customerCall">客户呼叫需求</string>
    <string name="chooseTableId">请选择桌号</string>
    <string name="statisticsAmount">正在统计金额，请稍等</string>
    <string name="tableNotOpen">还没有桌子开台</string>
    <string name="notice">注意</string>
    <string name="islogOut">确认交班</string>
    <string name="notificationTypeWarning">服务功能出现问题，暂时不能使用此功能，请联系技术开发人员来解决</string>
	<string name="notificationWarning">呼叫服务员不成功！</string>
	<string name="functionDisableCauseNetworkUnavalialbe">网络不可用时，无法使用该功能</string>
	<string name="rebate">打折</string>
	<string name="cashType">计算方式</string>
	<string name="advPaymentIllegal">预付值不正确</string>
	<string name="updateAdvPaymentFailed">提交预付失败</string>
	<string name="getAdvPaymentFailed">获取预付款失败</string>
</resources>