<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <!-- 统计信息  -->
	<RelativeLayout
	    android:layout_width="240dip"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@drawable/left" >
	    <LinearLayout android:id="@+id/titleBar"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	        <Button android:id="@+id/back_btn"
	            android:text="@string/back"
 	            android:textColor="#F9E8BB"
	        	android:textSize="30dip"
	            android:layout_width="120dip"
		    	android:layout_height="60dip"
		    	android:gravity="center"
	        	android:background="#00000000"/>
	        <Button android:id="@+id/left_btn"
 	            android:textColor="#F9E8BB"
	        	android:textSize="30dip"
	            android:layout_width="120dip"
		    	android:layout_height="60dip"
		    	android:gravity="center"
	        	android:background="#00000000"/>
	    </LinearLayout>
	    <Button android:id="@+id/submit"
	        android:layout_width="fill_parent"
    		android:layout_height="60dip"
	        android:text="@string/submit"
	        android:textColor="#F9E8BB"
	        android:textSize="35dip"
	        android:background="#00000000"
    		android:layout_alignParentBottom="true"/>
	    <LinearLayout
	         android:layout_width="fill_parent"
    		 android:layout_height="fill_parent"
    		 android:orientation="vertical"
    		 android:layout_marginTop="5dip"
    		 android:layout_marginBottom="5dip"
    		 android:layout_below="@id/titleBar"
    		 android:layout_above="@id/myOrder">
	        <!-- 桌号 -->
	        <TextView android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_marginTop="10dip"
	    		android:textSize="40dip"
	    		android:text="@string/tableNum"/>
	        <TextView android:id="@+id/tableNum"
	            android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textSize="40dip"/>
	        
	        <!-- 菜份数  -->
	        <TextView android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_marginTop="20dip"
	    		android:textSize="40dip"
	    		android:text="@string/dishCount"/>
	        <TextView android:id="@+id/dishCount"
	            android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textSize="40dip"/>
	        
	        <!-- 总价  -->
	        <TextView android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_marginTop="20dip"
	    		android:textSize="40dip"
	    		android:text="@string/totalPrice"/>
	        <TextView android:id="@+id/totalPrice"
	            android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textSize="40dip"/>
	    </LinearLayout>
    </RelativeLayout>
    
    <!-- 我点的菜  -->
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@drawable/right" >
	    <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
		    <TextView
		    	android:layout_width="fill_parent"
		    	android:layout_height="57dip"
		    	android:gravity="center"
		    	android:textSize="40dip"
		    	android:textColor="#652A25"
		    	android:text="@string/myOrder"/>
		    <Button android:id="@+id/refresh"
		        android:layout_height="57dp"
		        android:layout_width="wrap_content"
		        android:layout_marginLeft="15dp"
		        android:layout_alignParentLeft="true"
		        android:textSize="22sp"
		        android:textColor="#652A25"
		        android:text="@string/refresh"
		        android:background="@drawable/refresh"
		     />
	    </RelativeLayout>
	    <ListView android:id="@+id/myOrderList"
	        android:layout_width="fill_parent"
	    	android:layout_height="match_parent"
	    	android:layout_marginLeft="10dip"
	    	android:divider="#DECFBB"
	    	android:dividerHeight="1dip">
	    </ListView>
    </LinearLayout>
</LinearLayout>
