<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="240dip"
        android:layout_height="match_parent"
        android:background="@drawable/left"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/titleBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/back_btn"
                android:layout_width="120dip"
                android:layout_height="60dip"
                android:background="#00000000"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="#F9E8BB"
                android:textSize="25dip" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/titleBar"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <!-- 桌号 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/tableNum"
                android:textSize="40dip" />

            <TextView
                android:id="@+id/tableNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dip" />

            <!-- 菜份数 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/dishCount"
                android:textSize="40dip" />

            <TextView
                android:id="@+id/dishCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dip" />

            <!-- 总价 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/totalPrice"
                android:textSize="40dip" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dip" />
        </LinearLayout>
    </RelativeLayout>

    <!-- 菜谱 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/right"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="57dip"
            android:gravity="center"
            android:text="@string/queryOrder"
            android:textColor="#652A25"
            android:textSize="40dip" />

        <ListView
            android:id="@+id/myOrderList"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dip"
            android:divider="#DECFBB"
            android:dividerHeight="1dip" >
        </ListView>
    </LinearLayout>

</LinearLayout>
