<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <LinearLayout  android:id="@+id/order"
        android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:orientation="horizontal"
    	android:layout_alignParentRight="true"
    	android:layout_centerInParent="true"
    	android:paddingTop="4dp"
    	android:gravity="center_vertical">
    	<Button android:id="@+id/dishMinus5"
    	    android:layout_height="50dip"
    	    android:layout_width="50dip"
    	    android:layout_marginLeft="5dip"
    	    android:layout_marginRight="5dip"
    	    android:text="@string/minusFive"
    	    android:background="@drawable/selector_btn_yellow" />
    	<Button android:id="@+id/dishMinus"
    	    android:layout_height="50dip"
    	    android:layout_width="50dip"
    	    android:layout_marginLeft="5dip"
    	    android:layout_marginRight="5dip"
    	    android:text="@string/minusOne"
    	    android:background="@drawable/selector_btn_yellow" />
    	<TextView android:id="@+id/dishQuantity" 
	    	android:layout_width="50dip"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:textSize="40dip"
    		android:textColor="#000000"/>
    	<Button android:id="@+id/dishPlus"
    	    android:layout_height="50dip"
    	    android:layout_width="50dip"
    	    android:layout_marginLeft="5dip"
    	    android:layout_marginRight="5dip"
    	    android:text="@string/plusOne"
    	    android:background="@drawable/selector_btn_blue" />
    	<Button android:id="@+id/dishPlus5"
    	    android:layout_height="50dip"
    	    android:layout_width="50dip"
    	    android:layout_marginLeft="5dip"
    	    android:layout_marginRight="5dip"
    	    android:text="@string/plusFive"
    	    android:background="@drawable/selector_btn_blue" />
    </LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:layout_toLeftOf="@id/order"
    	android:paddingLeft="10dip"
    	android:orientation="horizontal"
    	android:layout_alignParentLeft="true"
    	android:layout_centerInParent="true">
    	<TextView android:id="@+id/dishName" 
	    	android:layout_width="180dip"
    		android:layout_height="wrap_content"
    		android:gravity="left"
    		android:textSize="27dip"
    		android:textColor="#4D2412"/>
    	<TextView android:id="@+id/dishPrice" 
	    	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:gravity="right"
    		android:textSize="20dip"
    		android:textColor="#4D2412"/>
    </LinearLayout>
</RelativeLayout>