<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F8E9C1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#F8E9C1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/statistics_titlebar"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/back"
                android:layout_width="200dip"
                android:layout_height="40dip"
                android:background="#00000000"
                android:text="@string/back"
                android:textColor="#F9E8BB"
                android:textSize="35dip" />

            <Button
                android:id="@+id/checkOutTable"
                android:layout_width="200dip"
                android:layout_height="40dip"
                android:background="#00000000"
                android:text="@string/checkout"
                android:textColor="#F9E8BB"
                android:textSize="35dip" />

            <Button
                android:id="@+id/logout"
                android:layout_width="200dip"
                android:layout_height="40dip"
                android:background="#00000000"
                android:text="@string/logout"
                android:textColor="#F9E8BB"
                android:textSize="35dip" />

            <Button
                android:id="@+id/management"
                android:layout_width="200dip"
                android:layout_height="40dip"
                android:background="#00000000"
                android:text="@string/mangement"
                android:textColor="#F9E8BB"
                android:textSize="35dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scr"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >
        </LinearLayout>

       
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="4dip"
        android:layout_marginLeft="200dp" >

        <Button
            android:id="@+id/orderNotification"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:background="#45000000"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/statusBar"
            android:layout_width="fill_parent"
            android:layout_height="28dp"
            android:background="#A0FF0000"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

</FrameLayout>